# afl-flow-prefect

./: .dockerignore  Dockerfile  docker-compose.yaml  pipeline.py  prefect.toml  prefect.yaml  pyproject.toml  requirements.txt  sheets.py  test.py
database/: db.py  models.py
database/models/: analytics.py  raw.py
etl/: extract.py  load.py  transform.py
local_types/: data_type.py
utils/: db.py
